# solstone-windows

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md  SECURITY.md  automation-contract.json  deny.toml  rust-toolchain.toml
crates/capture-engine/: Cargo.toml
crates/capture-engine/src/: lib.rs
crates/capture-engine/tests/: engine_survival.rs
crates/capture-screen-encode/: Cargo.toml
crates/capture-screen-encode/src/: lib.rs
crates/capture-wasapi/: Cargo.toml
crates/capture-wasapi/src/: lib.rs
crates/capture-wgc/: Cargo.toml
crates/capture-wgc/src/: lib.rs
crates/capture-wgc/src/imp/: window_enum.rs
crates/observer-audio/: Cargo.toml
crates/observer-audio/src/: lib.rs
crates/observer-contract/: Cargo.toml
crates/observer-contract/src/: lib.rs
crates/observer-exclusion/: Cargo.toml
crates/observer-exclusion/src/: lib.rs
crates/observer-health/: Cargo.toml
crates/observer-health/src/: lib.rs
crates/observer-hotkey/: Cargo.toml
crates/observer-hotkey/src/: lib.rs
crates/observer-lifecycle/: Cargo.toml
crates/observer-lifecycle/src/: lib.rs
crates/observer-log/: Cargo.toml
crates/observer-log/src/: filter.rs  frontend.rs  journal_open.rs  lib.rs  panic.rs  redact.rs  time.rs  writer.rs
crates/observer-mic/: Cargo.toml
crates/observer-mic/src/: lib.rs
crates/observer-model/: Cargo.toml
crates/observer-model/src/: launch.rs  lib.rs  tray_status.rs
crates/observer-nv12/: Cargo.toml
crates/observer-nv12/src/: lib.rs
crates/observer-pl/: Cargo.toml
crates/observer-pl/src/: bridge.rs  ca.rs  civil.rs  crockford.rs  frame.rs  http.rs  jwt.rs  lib.rs  multipart.rs  mux.rs  pairlink.rs  relay.rs  relay_window.rs  wire.rs
crates/observer-pl/tests/: observer_contract_conformance.rs
crates/observer-recovery/: Cargo.toml
crates/observer-recovery/src/: lib.rs
crates/observer-retention/: Cargo.toml
crates/observer-retention/src/: lib.rs
crates/observer-sample-timing/: Cargo.toml
crates/observer-sample-timing/src/: lib.rs
crates/observer-segment/: Cargo.toml
crates/observer-segment/src/: lib.rs
crates/observer-state/: Cargo.toml
crates/observer-state/src/: lib.rs
crates/observer-update/: Cargo.toml
crates/observer-update/src/: lib.rs
crates/pl-transport-win/: Cargo.toml
crates/pl-transport-win/examples/: live_gate.rs  mock_journal.rs  relay_live_gate.rs  relay_pair_gate.rs
crates/pl-transport-win/src/: client.rs  connection.rs  coordinator.rs  credential.rs  heartbeat.rs  journal_bridge.rs  journal_bridge_carrier.rs  lib.rs  pairing.rs  relay.rs  relay_http.rs  relay_pairing.rs  relay_token.rs  sealed.rs  service.rs  slot.rs  spki_pin.rs  tls.rs
crates/pl-transport-win/tests/: journal_bridge_contact.rs  relay_pairing_round_trip.rs  relay_round_trip.rs  transport_round_trip.rs  upload_lifecycle_log.rs
crates/pl-transport-win/tests/support/: mod.rs  observer_contract.rs
crates/platform-win/: Cargo.toml
crates/platform-win/src/: autostart.rs  lib.rs  local_offset.rs
docs/: architecture.md  automation-contract.md  design-1A-capture-core.md  design-encoder.md  journal-bridge-carrier.md  journal-window-live.md  lifecycle-matrix.md  observer-contract-adoption.md  release-finalizer-witness-ledger.md  release-runbook.md
harness/: README.md
packaging/: DISTRIBUTION.md  README.md  lock-guard.ps1  npm-cache-preflight.ps1  preflight-release-tools.ps1  release-toolchain.json  signing-policy.json
scripts/: check-channels.sh  check-win-sync-tree.sh  gate-minisign.sh  journal-window-live.ps1  package.ps1  preflight-cargo-deny.sh  publish-gh.sh  (+14 more)
spikes/gdi-screen/: Cargo.toml
spikes/gdi-screen/src/: main.rs
spikes/mic/: Cargo.toml
spikes/mic/src/: main.rs
spikes/wasapi-loopback/: Cargo.toml
spikes/wasapi-loopback/src/: main.rs
spikes/wgc/: Cargo.toml
spikes/wgc/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  control.rs  exclusions.rs  health.rs  hotkey.rs  ipc.rs  lifecycle.rs  main.rs  mic.rs  retention.rs  tray.rs  update.rs  update_feed.rs  windows.rs
xtask/: Cargo.toml
xtask/src/: advisory_audit.rs  artifact_fs.rs  lib.rs  main.rs  native_release_proof.rs  observer_contract.rs  purity.rs  release_advisory.rs  release_clock.rs  release_container.rs  release_exec.rs  release_finalizer.rs  release_finalizer_fs.rs  release_receipt.rs  release_selection.rs  release_signing.rs  release_source_binding.rs  rust_release_manifest.rs  transparency_format.rs  transparency_publisher.rs  transparency_stage.rs  transparency_transport.rs  version_gate.rs
xtask/tests/: advisory_audit.rs  artifact_fs.rs  capability_guard.rs  contract_not_stale.rs  deterministic_gates.rs  native_release_proof.rs  native_release_proof_mutations.rs  no_live_advisory_token.rs  observer_contract.rs  observer_contract_independence.rs  purity_check.rs  release_advisories.rs  release_container_baseline.rs  release_finalizer.rs  release_finalizer_fs.rs  release_receipt.rs  release_selection.rs  release_signing.rs  release_source_binding.rs  rust_release_manifest.rs  rust_release_manifest_bare.rs  rust_release_manifest_independence.rs  transparency_builders.rs  transparency_canonicalization.rs  transparency_publisher.rs  transparency_schemas.rs  transparency_staging.rs  transparency_transport.rs  unsafe_policy.rs  version_gate.rs
xtask/tests/fixtures/rust-release-manifest/manifest-mode/: Solstone-0.2.11-full.nupkg  assets.win.json  manifest.json  releases.win.json
xtask/tests/fixtures/rust-release-manifest/negative/: RELEASES-missing-bom  assets-default-setup.win.json
xtask/tests/fixtures/rust-release-manifest/release-dir/: RELEASES  solstone-windows-x86_64-pc-windows-msvc.rust-release-manifest.json
xtask/tests/fixtures/signtool/: verify-signed-setup.txt
xtask/tests/fixtures/transparency/: entry-trusted-comment.txt  entry-vector.canonical.json  latest-trusted-comment.txt  latest-vector.canonical.json  stage-manifest-v1.txt
xtask/tests/support/: mod.rs  transparency.rs
(+59 files in other folders)
