[package]
name = "solstone-windows-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "The solstone Windows observer binary: a tray-resident Tauri v2 shell over the capture engine. Thin — arg dispatch (--dump-state/--healthz), tray, Settings/About windows, and IPC."
default-run = "solstone-windows-app"

[[bin]]
name = "solstone-windows-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Engine + platform sources injected at the seam.
capture-engine.workspace = true
platform-win.workspace = true
capture-wgc.workspace = true
capture-wasapi.workspace = true
pl-transport-win.workspace = true
observer-model.workspace = true
observer-health.workspace = true
observer-state.workspace = true
observer-contract.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true

tauri = { version = "2", features = ["tray-icon", "image-png"] }

# Velopack-aware entry hook (VelopackApp runs first in main) + per-user install
# feed. Exact pin: the app crate is not built by any gated path, so the build box
# must resolve exactly the version the integration was authored against.
velopack = "=1.2.0"

[features]
# Default keeps the custom protocol off; release builds enable as needed.
custom-protocol = ["tauri/custom-protocol"]
