[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Workspace task runner: `contract [--check]` (regenerate/verify automation-contract.json + the ui codegen), `package`, `dev`."
publish = false

[lints]
workspace = true

[dependencies]
observer-contract.workspace = true
serde_json.workspace = true

[dev-dependencies]
syn = { version = "2.0.118", default-features = false, features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
