[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Workspace task runner: local contract, purity, package, and development checks."
publish = false

[lints]
workspace = true

[dependencies]
observer-contract.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
syn = { version = "2.0.118", default-features = false, features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
