[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Workspace task runner: automation-contract generation, observer-client authority-bundle verification, purity, package, and development checks."
publish = false

[lints]
workspace = true

[dependencies]
base64.workspace = true
jsonschema = { version = "=0.48.2", default-features = false }
observer-contract.workspace = true
semver = "=1.0.28"
serde.workspace = true
serde_json.workspace = true
sha1 = "=0.10.6"
sha2.workspace = true
toml = "=0.8.2"
tempfile = "=3.27.0"
twox-hash = { version = "=2.1.2", default-features = false, features = ["xxhash64"] }
url = "=2.5.8"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
syn = { version = "2.0.118", default-features = false, features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
