[package]
name = "capture-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false
description = "Composition-tier orchestrator: sources -> writer -> rotation -> state -> recovery. Tauri-agnostic and host-testable with fake sources; depends on the pure-tier trait seams, not the platform crates."

[lints]
workspace = true

[dependencies]
observer-model.workspace = true
observer-segment.workspace = true
observer-state.workspace = true
observer-health.workspace = true
observer-recovery.workspace = true
observer-lifecycle.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
tracing.workspace = true

[dev-dependencies]
observer-audio.workspace = true
observer-pl.workspace = true
platform-win.workspace = true
pl-transport-win.workspace = true
