[package]
name = "capture-wasapi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASAPI render-loopback system audio + eCapture microphone (implements SystemAudioSource and MicSource). Owns the SourceState::NoInputDevice determination. Platform-tier: windows-rs quarantine."

[dependencies]
observer-model.workspace = true
observer-mic.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
] }
