[package]
name = "capture-wgc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Windows.Graphics.Capture screen source (implements ScreenSource). Platform-tier: windows-rs quarantine; unsafe permitted here only; builds for the Windows MSVC target."

[dependencies]
observer-model.workspace = true

[target.'cfg(windows)'.dependencies]
windows-capture = "2.0.0"
