[package]
name = "capture-wgc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false
description = "Windows.Graphics.Capture screen source (implements ScreenSource). Platform-tier: windows-rs quarantine; unsafe permitted here only; builds for the Windows MSVC target."

[lints]
workspace = true

[dependencies]
observer-model.workspace = true
observer-exclusion.workspace = true

[target.'cfg(windows)'.dependencies]
windows-capture = "2.0.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
