[package]
name = "observer-segment"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false
description = "5-minute clock-boundary rotation and segment-key math for the observer. Pure, host-testable with a synthetic clock; I/O goes through the SegmentFs trait."

[lints]
workspace = true

[dependencies]
observer-model.workspace = true
