[package]
name = "pl-transport-win"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Framed-mTLS PL transport + observer client/upload/heartbeat for the Windows observer. Drives observer-pl's pure wire over a rustls (ring) TLS socket with CA-fingerprint pinning + leaf-signature verification. rustls is cross-platform, so the whole crate is host-testable and the live pair+ingest gate can run off-Windows too."

[dependencies]
observer-log.workspace = true
observer-pl.workspace = true
observer-model.workspace = true
observer-retention.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros", "time", "sync"] }
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
tokio-tungstenite.workspace = true
rustls-webpki.workspace = true
webpki-roots.workspace = true
futures-util.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "test-util"] }
rcgen = { workspace = true, features = ["x509-parser"] }
