[package]
name = "platform-win"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Windows platform glue: session/power notification pump, named-mutex single-instance gate, %LocalAppData% paths, and the real SegmentFs/RecoveryFs implementations. Platform-tier: windows-rs quarantine."

[dependencies]
observer-model.workspace = true
observer-audio.workspace = true
observer-segment.workspace = true
observer-recovery.workspace = true
observer-hotkey.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Time",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
# Per-user autostart `Run`-key registration (safe wrapper over the HKCU registry).
winreg = "0.55"
