# Reference spike — not a workspace member (spikes/ is excluded from the build).
# Extracted from the box-side `capture-spike` project (its `audio` bin = WASAPI
# render-loopback system-audio capture). The dependency block is reproduced
# verbatim from that project, so the `windows` feature set is the superset shared
# with the sibling `gdi-screen` spike. Reference for `capture-wasapi` loopback.
[package]
name = "wasapi-loopback-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_System_Com",
] }
image = "0.25"
